//
// proto3
// Syntax documentation - see https://developers.google.com/protocol-buffers/docs/proto3
//
syntax = "proto3";

// GRPC package, also used by the Go code generator
package blueprint;

// Java code generation options
option java_generic_services = true;
option java_multiple_files = true;
option java_package = "org.tues.stefchog.blueprint.grpc";
option java_outer_classname = "BlueprintProto";


service AccountService {
    rpc register(RegisterRequest) returns (RegisterResponse);
    rpc getUser(GetUserRequest) returns (UserResponse);
}

message RegisterError {
    enum Cause {
        INTERNAL_SERVER_ERROR = 0;
        WRONG_EMAIL_OR_PASSWORD = 1;
    }
    Cause cause = 1;
}

message RequestError {
    enum Cause {
        INTERNAL_SERVER_ERROR = 0;
        WRONG_PARAMETERS = 1;
    }
    Cause cause = 1;
    string messgae = 2;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    Role role = 3;
}

message GetUserRequest {
    Account account = 1;
}

message Account {
    string id = 1;
    string username = 2;
    Role role = 3;
}

enum Role {
    UNDEFINED = 0; 
    USER = 1; // regular user
    ADMIN = 2; // powerful user
}

message RegisterResponse {
	oneof result {
		RegisterError error = 1;
		string status = 2;
	}
}

message UserResponse {
	oneof result {
		RequestError error = 1;
		Account account = 2;
	}
}

